# grpc-playground

./: .gitignore  README.md  requirements.txt
keys/: client.crt  client.key
python/: client.py  helloworld_grpc.py  helloworld_pb2.py  server.py
rust/helloworld/: Cargo.toml
rust/helloworld/src/: helloworld.rs  helloworld_grpc.rs
